--- a/index.html
+++ b/index.html
@@ -2,13 +2,54 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>opentutorials.org</title>
+        <style type="text/css">
+            body {
+                font-size: 0.8em;
+                font-family: dotum;
+                line-height: 1.6em;
+            }
+            header {
+                border-bottom: 5px dashed #ccc;
+                padding: 80px 50px;
+                font-size: 30pt;  
+            }
+            #toolbar {
+                padding: 10px;
+                float: right;
+            }
+            nav {
+                float: left;
+                margin-right: 20px;
+                min-height: 500px;
+                border-right: 1px solid #ccc;
+            }
+            nav ul {
+                list-style: none;
+                padding-left: 0;
+                padding-right: 20px;
+            }
+            article {
+                float: left;
+            }
+            a {
+                text-decoration: none;
+            }
+            a:link, a:visited {
+                color: #333;
+            }
+            a:hover {
+                color: #f60;
+            }
+            h1 {
+                font-size: 1.4em;
+            }
+        </style>
     </head>
  
-    <body id="body">
+    <body>
         <div>
             <header>
-                <h1>JavaScript</h1>
+                <h1>IDEahub</h1>
             </header>
             <div id="toolbar">
                 <input type="button" value="black" />
@@ -16,18 +57,32 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="http://opentutorials.org/course/49/17">JavaScript</a></li>
-                    <li><a href="http://opentutorials.org/course/49/16">변수와 상수</a></li>
-                    <li><a href="http://opentutorials.org/course/49/18">연산자</a></li>
-                    <li><a href="http://opentutorials.org/course/49/19">함수</a></li>
-                    <li><a href="http://opentutorials.org/course/49/20">이벤트</a></li>
-                    <li><a href="http://opentutorials.org/course/49/21">객체</a></li>
+                    <li>
+                        <a href="http://opentutorials.org/course/49/16">내 정보</a>
+                    </li>
+                    <li>
+                        <a href="http://opentutorials.org/course/49/17">내 프로젝트</a>
+                    </li>
+                    <li>
+                        <a href="http://opentutorials.org/course/49/18">인기 프로젝트</a>
+                    </li>
+                    <li>
+                        <a href="http://opentutorials.org/course/49/19">프로젝트 찾기</a>
+                    </li>
+                    <li>
+                        <a href="http://opentutorials.org/course/49/20">이벤트</a>
+                    </li>
+                    <li>
+                        <a href="http://opentutorials.org/course/49/21">객체</a>
+                    </li>
                 </ul>
             </nav>
             <article>
                 <h2>변수와 상수</h2>
                 <div>
-                    <p>변수란</p>
+                    <p>
+                        변수란
+                    </p>
                     <ul>
                         <li>
                             변하는 값
